# switchboard

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: book.toml
docs/src/: chapter_1.md
examples/pubsubtest/: README.md  index.html  main.js
protoo-rs/: Cargo.toml
protoo-rs/src/: lib.rs  server.rs
src/: gui.rs  lib.rs  main.rs  p2p.rs  pipeline.rs
switchboard-client/: Cargo.toml
switchboard-client/examples/: jsonrpc.rs
switchboard-client/src/: client.rs  lib.rs  signal.rs
switchboard-gst/: Cargo.toml
switchboard-gst/src/: lib.rs
switchboard-gst/src/client/: imp.rs  mod.rs
switchboard-p2p/: Cargo.toml
switchboard-p2p/src/: p2p.rs
switchboard-proto/: Cargo.toml
switchboard-proto/src/: jsonrpc.rs  lib.rs  signal.rs
switchboard-rs/: Cargo.toml
switchboard-rs/src/: lib.rs  main.rs  peer.rs  pipeline.rs  room.rs  router.rs  sfu.rs  signal.rs
switchboard-sfu/: Cargo.toml
switchboard-sfu/src/: extip.rs  lib.rs  main.rs
switchboard-sfu/src/p2p/: mod.rs  node.rs  session.rs
switchboard-sfu/src/sfu/: api.rs  coordinator.rs  media_track_router.rs  mediaengine.rs  mod.rs  peer.rs  routing.rs  session.rs
switchboard-sfu/src/sfu/routing/: mod.rs  router.rs  subscriber.rs
switchboard-sfu/src/signal/: jsonrpc.rs  mod.rs  server.rs  signal.rs
switchboard-web/: Cargo.toml  package.json  webpack.config.js
switchboard-web/public/: index.html
switchboard-web/src/: App.js  app.rs  lib.rs  rtc.rs
switchboard-web/static/: index.html
