[package]
name = "tapedeck"
version = "0.1.0"
authors = ["Billy Lindeman <billy@lindeman.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"}
gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }

glib = { git = "https://github.com/gtk-rs/glib"}
gio = {  git = "https://github.com/gtk-rs/gio" }

serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8.11"
failure = "0.1.6"
regex = "1.3.4"
crossbeam-channel = "0.4.0"
enclose = "1.1.8"
midir = "0.5.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
chrono = "0.4.10"
clap = "2.33.0"
async-std = "1.5.0"
async-tungstenite =  "*"
futures = "0.3.4"
tungstenite = "0.10.1"


# Add libx11 as a dependency on linux only
# [target.'cfg(target_os = "linux")'.dependencies]
# x11 = { version = "2.18.1", features = ["xlib"] }
