[package]
authors = ["Billy Lindeman <billy@lindeman.sh>"]
edition = "2018"
name = "protoo-rs"
version = "0.1.0"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"


async-tungstenite =  "*"
async-std = "1.6.2"
futures = "0.3.5"
tungstenite = "0.11"

log = "0.4.8"
pretty_env_logger = "0.4.0"


