[package]
name = "switchboard-client"
version = "0.1.0"
edition = "2021"

[dependencies]
webrtc = "0.12.0"
switchboard-proto = {path = "../switchboard-proto"}
switchboard-sfu = { path = "../switchboard-sfu" }
tokio = "1.42.0"
async-tungstenite = { version = "0.28.2", features = ["tokio", "tokio-rustls-native-certs"] }
anyhow = "1.0.94"
futures = "0.3.31"
tokio-utils = "0.1.2"
tokio-util = "0.7.13"


