[package]
name = "switchboard-gst-plugins"
version = "0.1.0"
edition = "2021"
authors = ["Billy Lindeman <billy@switchboard.rs>"]
description = "Connects a gstreamer pipeline to a switchboard WebRTC SFU"
repository = "https://github.com/billylindeman/switchboard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.15.11"
gstreamer = "0.18.8"
gstreamer-base = "0.18.0"
gstreamer-video = "0.18.7"
once_cell = "1.0"

[lib]
name = "switchboardgst"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = {  git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs", tag = "0.8.4" }
