[package]
name = "switchboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
libp2p = { version = "0.40.0", features = ["tcp-tokio"]}
pretty_env_logger = "0.4.0"
tokio = { version = "1.13.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"] }
rocket = "0.5.0-rc.1"
