[package]
name = "switchboard"
version = "0.1.0"
authors = ["Billy Lindeman <billy@lindeman.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "switchboard"
path = "src/lib.rs"

[[bin]]
name = "switchboard"
path = "bin/main.rs"

[dependencies]
gst = { package = "gstreamer", version = "0.15", features = ["v1_14"] }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.15" }
gst-sdp = { package = "gstreamer-sdp", version = "0.15", features = ["v1_14"] }

#glib = { git = "https://github.com/gtk-rs/glib"}
#gio = {  git = "https://github.com/gtk-rs/gio" }

serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0.56" } 
failure = "0.1.6"
regex = "1.3.4"
crossbeam-channel = "0.4.0"
enclose = "1.1.8"
log = "0.4.8"
pretty_env_logger = "0.4.0"
chrono = "0.4.10"
clap = "2.33.0"

uuid = { version = "0.8", features = ["serde", "v4"] }

jsonrpc-core = "14.2"
jsonrpc-core-client = "14.2"
jsonrpc-ws-server = "14.2"
jsonrpc-derive = "14.2"
jsonrpc-pubsub = "14.2"

async-std = { version = "1.6.2" , features = ["unstable"] }
