[package]
name = "switchboard-sfu"
version = "0.1.3"
edition = "2021"
authors = ["Billy Lindeman <billylindeman@gmail.com>"]


default-run = "switchboard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["simulcast", "audiolevel"]
simulcast = []
audiolevel = []

[dependencies]
anyhow = "1"
pretty_env_logger = "0.4"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tokio = { version = "1.8", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
tokio-tungstenite = "0.17.1"
log = "0.4.17"
futures-util = "0.3.21"

serde = "1.0.137"
serde_json = { version = "1" }
async-mutex = "1.4.0"
futures-channel = "0.3.21"
enclose = "1.1.8"
async-trait = "0.1.53"
uuid = { version = "1.0.0", features = ["v4", "serde"]}

webrtc = "0.6.0"

#libp2p experiment
#libp2p = { version = "0.40.0", features = ["tcp-tokio"], optional = true}

[[bin]]
name = "switchboard"
path = "bin/main.rs"




