[package]
name = "switchboard-web"
version = "0.2.0"
authors = ["Billy Lindeman <billy@lindeman.sh"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.17"
strum_macros = "0.17"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.67"
wasm-logger = "0.2"
js-sys = "0.3"
wee_alloc = { version = "0.4.4", optional = true }
yew = "0.17"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  'KeyboardEvent',
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]

